--- a/Photoid/app/build.gradle
+++ b/Photoid/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "aguirre.ivan.photoid"
+        applicationId "com.photoid"
         minSdkVersion 16
         targetSdkVersion 20
         versionCode 1
@@ -21,4 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.squareup.picasso:picasso:2.3.2'
 }
