--- a/Photoid/app/build.gradle
+++ b/Photoid/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "com.photoid"
         minSdkVersion 16
-        targetSdkVersion 20
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
@@ -22,4 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup.picasso:picasso:2.3.2'
+    compile "com.android.support:appcompat-v7:19.0.1"
+    compile 'com.android.support:mediarouter-v7:19.0.1'
+    compile 'com.google.android.gms:play-services:+'
 }
