--- a/DropboxCast/app/build.gradle
+++ b/DropboxCast/app/build.gradle
@@ -22,4 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':dropboxChooserSDK')
+    compile "com.android.support:appcompat-v7:20.+"
+    compile 'com.android.support:mediarouter-v7:20.+'
+    compile 'com.google.android.gms:play-services:+'
+
 }
